[gd_scene load_steps=14 format=2]

[ext_resource path="res://Script/coin.gd" type="Script" id=1]
[ext_resource path="res://Sprite/gdb-coinsgemsetc-1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=26]
radius = 67.0

[sub_resource type="CircleShape2D" id=29]
radius = 8.0

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 5.5, 7 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 16, 112, 16, 15 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 112, 16, 15 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 112, 16, 15 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 112, 16, 15 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 80, 112, 16, 15 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 112, 16, 15 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 112, 112, 16, 15 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "coin",
"speed": 5.0
} ]

[node name="coin" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="coin" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="coin"]
light_mask = 2
shape = SubResource( 26 )

[node name="delete" type="Area2D" parent="."]

[node name="delete" type="CollisionShape2D" parent="delete"]
position = Vector2( 0, 1 )
shape = SubResource( 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( -0.5, 1 )
shape = SubResource( 28 )
disabled = true

[node name="sprite_xp" type="AnimatedSprite" parent="."]
frames = SubResource( 27 )
animation = "coin"
frame = 3
playing = true

[connection signal="body_entered" from="coin" to="." method="_on_xp_body_entered"]
[connection signal="body_entered" from="delete" to="." method="_on_delete_body_entered"]
